# AD3

./: CMakeLists.txt  MANIFEST.in  ad3_multi.cpp  setup.py
ad3/: Factor.cpp  Factor.h  FactorDense.h  FactorGraph.cpp  FactorGraph.h  GenericFactor.cpp  GenericFactor.h  MultiVariable.h  Utils.cpp  Utils.h
examples/cpp/dense/: FactorSequence.h  simple_grid.cpp
examples/cpp/logic/: simple_coref.cpp
examples/cpp/parsing/: FactorGrandparentHeadAutomaton.h  FactorHeadAutomaton.h  FactorTree.cpp  FactorTree.h  simple_parser.cpp
examples/cpp/summarization/: FactorBinaryTree.h  FactorBinaryTreeCounts.h  FactorCompressionBudget.h  FactorGeneralTree.h  FactorGeneralTreeCounts.h  FactorSequenceBudget.h  FactorSequenceCompressor.h
python/: CMakeLists.txt
python/ad3/: CMakeLists.txt  __init__.py  base.cpp  base.pxd  base.pyx  extensions.pyx  factor_graph.pyx
